# ing2-tg-2023-2024-10-69

./: CMakeLists.txt  README.md  main.c
