cmake_minimum_required(VERSION 3.23)
project(untitled C)

set(CMAKE_C_STANDARD 99)

add_executable(untitled main.c temps_cycle.h)

//ProductionLineA productionLine1 = new ProductionLineA(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineB productionLine2 = new ProductionLineB(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineC productionLine3 = new ProductionLineC(tasks, this,
                        localWarehouse, distantWarehouse);
 pool.submit(productionLine1);
 pool.submit(productionLine2);
 pool.submit(productionLine3);
 ProductionLineA productionLine1 = new ProductionLineA(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineB productionLine2 = new ProductionLineB(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineC productionLine3 = new ProductionLineC(tasks, this,
                        localWarehouse, distantWarehouse);
 pool.submit(productionLine1);
 pool.submit(productionLine2);
 pool.submit(productionLine3);
 ProductionLineA productionLine1 = new ProductionLineA(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineB productionLine2 = new ProductionLineB(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineC productionLine3 = new ProductionLineC(tasks, this,
                        localWarehouse, distantWarehouse);
 pool.submit(productionLine1);
 pool.submit(productionLine2);
 pool.submit(productionLine3);
 ProductionLineA productionLine1 = new ProductionLineA(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineB productionLine2 = new ProductionLineB(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineC productionLine3 = new ProductionLineC(tasks, this,
                        localWarehouse, distantWarehouse);
 pool.submit(productionLine1);
 pool.submit(productionLine2);
 pool.submit(productionLine3);

 v
 ProductionLineA productionLine1 = new ProductionLineA(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineB productionLine2 = new ProductionLineB(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineC productionLine3 = new ProductionLineC(tasks, this,
                        localWarehouse, distantWarehouse);
 pool.submit(productionLine1);
 pool.submit(productionLine2);
 pool.submit(productionLine3);

 ProductionLineA productionLine1 = new ProductionLineA(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineB productionLine2 = new ProductionLineB(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineC productionLine3 = new ProductionLineC(tasks, this,
                        localWarehouse, distantWarehouse);
 pool.submit(productionLine1);
 pool.submit(productionLine2);
 pool.submit(productionLine3);
 ProductionLineA productionLine1 = new ProductionLineA(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineB productionLine2 = new ProductionLineB(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineC productionLine3 = new ProductionLineC(tasks, this,
                        localWarehouse, distantWarehouse);
 pool.submit(productionLine1);
 pool.submit(productionLine2);
 pool.submit(productionLine3);
 ProductionLineA productionLine1 = new ProductionLineA(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineB productionLine2 = new ProductionLineB(tasks, this,
                        localWarehouse, distantWarehouse);
 ProductionLineC productionLine3 = new ProductionLineC(tasks, this,
                        localWarehouse, distantWarehouse);
 pool.submit(productionLine1);
 pool.submit(productionLine2);
 pool.submit(productionLine3);
 
